# particle_attractor_opengl

./: .gitignore  CMakeLists.txt  README.md
src/: Application.cpp  CudaGlobal.h  DisplayManager.cpp  DisplayManager.h  Renderer.cpp  Renderer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  cudaGlobal.h  kernel.cu  kernel.h  main.cpp
src/shaders/: Shader.cpp  Shader.h  particle.glsl
